# neural-networks-pthreads

./: CMakeLists.txt
neural-networks/: CMakeLists.txt  FeedforwardNeuralNetwork.cpp  FeedforwardNeuralNetwork.h
neural-networks/common/: TrainSettings.h  util.cpp  util.h
neural_networks/: .gitignore  CMakeLists.txt  FeedforwardNeuralNetwork.cpp  FeedforwardNeuralNetwork.h  benchmark.py  main.cpp
neural_networks/common/: TrainResult.h  util.cpp  util.h
runner/: CMakeLists.txt  data-util.cpp  data-util.h
test/: ApproxMatrixMatcher.cpp  ApproxMatrixMatcher.h  CMakeLists.txt  main.cpp
